<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_corner2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

        <View
            android:id="@+id/view"
            android:layout_width="68dp"
            android:layout_height="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="12dp"
            />

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/img_sumka"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/prodduct_name"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/category"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />


        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
            app:layout_constraintStart_toEndOf="@id/tv_category"
            android:layout_marginHorizontal="16dp"
            android:text="@string/mens_clock"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_category"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/rating"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_category"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:numStars="5"
            android:progressTint="@color/black"
            android:backgroundTint="@color/black"
            android:isIndicator="true"
            />


        <TextView
            android:id="@+id/tv_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/price"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/grayMiddle"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/tv_price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/tv_price_text"
            android:layout_marginHorizontal="16dp"
            android:text="15.99"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_price_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/the_color_could_be_slightly_different_between_on_the_screen_and_in_practice_please_note_that_body_builds_vary_by_person_therefore_detailed_size_information_should_be_reviewed_below_on_the_product_description"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/grayDark"
            android:layout_marginTop="10dp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="start|center_vertical"
            android:text="@string/add_to_cart"
            android:textSize="20sp"
            android:paddingStart="32dp"
            android:paddingEnd="22dp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/ic_basket"
            android:layout_marginBottom="16dp"
            app:iconSize="22dp"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            app:iconTint="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_to_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="start|center_vertical"
            android:text="@string/go_to_card"
            android:textSize="20sp"
            android:paddingStart="32dp"
            android:paddingEnd="22dp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/ic_basket"
            android:layout_marginBottom="16dp"
            app:iconSize="22dp"
            android:visibility="gone"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:backgroundTint="@color/black"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>