<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_corner">

    <ImageView
        android:id="@+id/img_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_category"
        />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/category"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/choose_your_preferred"
        android:textSize="14sp"
        android:textColor="@color/grayDark"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_choose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all2"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"

                />

        </LinearLayout>


        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mens_clock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/men_s_clothing"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"/>

            <RadioButton
                android:id="@+id/rb_mens_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp" />

        </LinearLayout>


        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_jewelry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jewelry"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"/>

            <RadioButton
                android:id="@+id/rb_jewerly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp" />

        </LinearLayout>


        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_electronics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/electronics"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"/>

            <RadioButton
                android:id="@+id/rb_electronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp" />

        </LinearLayout>


        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/tv_women_clock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Women's clothing"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"/>

            <RadioButton
                android:id="@+id/rb_women_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grayMiddle"
            android:layout_marginTop="16dp"
            />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_container"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_container"
        android:text="@string/decline"
        app:layout_constraintEnd_toStartOf="@id/tv_accept"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>