<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/graylight"
    tools:context=".presenter.ui.fragments.BasketFragment">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toStartOf="@id/img_logo"

        />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/product_img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_back"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"


        />


    <TextView
        android:id="@+id/tv_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/grayDark"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_basket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_products"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        tools:listitem="@layout/item_basket"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"

        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="start|center_vertical"
        android:text="BUY"
        android:textSize="20sp"
        android:paddingStart="32dp"
        android:paddingEnd="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_buy2"
        android:layout_marginBottom="16dp"
        app:iconSize="22dp"
        app:iconGravity="end"
        app:iconPadding="8dp"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_something"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/add_something"
        android:visibility="gone"
        android:textSize="20sp"
        android:paddingStart="32dp"
        android:paddingEnd="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_basket_empty"
        android:layout_marginBottom="16dp"
        app:iconSize="22dp"
        app:iconGravity="end"
        app:iconPadding="8dp"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        />



</androidx.constraintlayout.widget.ConstraintLayout>